[package]
name = "arceos-latest"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libax = { path = "../../ulib/libax", features = ["paging"] }
loongarch64 = { path = "../../crates/loongarch64" }
log = "0.4"